CSS Fix (wrong color)

--- a/styles/standard/style.css
+++ b/styles/standard/style.css
@@ -762,6 +762,10 @@ ul.sidebarNav {
 					margin-bottom: -1px;
 				}
 
+				.tabs ul li a.active:hover {
+					color: #3c586b;
+				}
+
 
 
 	.tabs .content {
